# highway_tutor

./: .gitignore  CMakeLists.txt
Data/: Highway.txt  Passages.txt  Runs.txt
inc/: DATATIME_H.h  FILE_ERROR_H.h  HIGHWAY_H.h  PASSAGE_H.h  PROFILO_VELOCITA_H.h  SIMULATORE_H.h  SVINCOLO_H.h  TUTOR_H.h  TUTOR_VEHICLE_DATA.h  VARCO_H.h  VEHICLE_H.h  Vehicle.h
src/: HIGHWAY_H.h  Highway.cpp  Highway.txt  SVINCOLO_H.h  Simulatore.cpp  Tutor.cpp  VARCO_H.h  Vehicle.cpp  datatime.cpp  file_error.cpp  highway_load.cpp  profiloVelocita.cpp  simulatore  svincolo.cpp  tutor_main.cpp  varco.cpp  vehicle.cpp  vehicle_generator.cpp
